retrieveUnpackaged/objects/OrderItemEquipment__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <description>/</description>
        <label>Serial Number</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>OrderItemEquipment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>/</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ModelNumber__c</fullName>
        <formula>Equipment__r.Material__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderItem__c</fullName>
        <description>/</description>
        <label>Order Item Number</label>
        <referenceTo>OrderItem__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>OrderItemEquipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SapDeliveryNumber__c</fullName>
        <description>/ Optional ?technical field. Not shown in the UI</description>
        <formula>OrderItem__r.Delivery__r.DeliveryNumber__c</formula>
        <label>SAP Delivery Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapEquipmentNumber__c</fullName>
        <description>Equipment / OBJK-SERNR / Optional technical field. Not shown in the UI</description>
        <formula>Equipment__r.EquipmentNumber__c</formula>
        <label>SAP Equipment Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapMaterialDesc__c</fullName>
        <description>/</description>
        <formula>OrderItem__r.Material__r.MaterialDesc__c</formula>
        <label>SAP Material Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapMaterialNumber__c</fullName>
        <description>Open Item / VBAP-MATNR
Return Item / VBAP-MATNR
Delivery Item / LIPS -MATNR / Optional ?technical field. Not shown in the UI</description>
        <formula>OrderItem__r.Material__r.MaterialNumber__c</formula>
        <label>SAP Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapOrderItemNumber__c</fullName>
        <description>/ Optional technical field. Not shown in the UI</description>
        <formula>OrderItem__r.ItemNumber__c</formula>
        <label>SAP Order Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SapOrderNumber__c</fullName>
        <description>/ Optional ?technical field. Not shown in the UI</description>
        <formula>OrderItem__r.Order__r.OrderNumber__c</formula>
        <label>SAP Order Number</label>
        <type>Text</type>
    </fields>
    <label>Order Item Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>X{000000000}</displayFormat>
        <label>Order Item Equipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Item Equipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>